# atu-sim

./: .gitignore  README.md  pyproject.toml
atu10_firmware_sim/: __init__.py  core.py  detectors.py  edz_example.py  hardware.py  lc_bank.py  plotting.py  simulator.py
atu10_firmware_sim/tuning_algos/: atu10_reference.py  base.py  bg_algo.py  firmware.py  legacy.py  types.py
atu_sim/: __init__.py  hardware.py  plotting.py  simulator.py
atu_sim/tuning_algos/: bg_algo.py
examples/: __init__.py  edz_example.py
examples/edz_example/: __init__.py  __main__.py  cebik_tables.py
tests/: test_vswr_regression.py
