[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atu10-firmware-sim"
version = "0.1.0"
description = "ATU-10 tuner firmware algorithm simulator and LC model"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Ben Gelb", email = "ben.gelb@gmail.com"},
]

[project.urls]
Home = "https://github.com/bgelb/atu10-firmware-sim"
